# SP0511---MAJOR-PROJECT-

./: .flake8  .gitignore  AGENT_COMMUNICATION_PROTOCOL.md  AI_QUICK_REFERENCE.md  AMAZING_PROJECT_SUMMARY.md  ARCHITECTURE.md  BACKEND_SUMMARY.md  COMPLETE_FILE_MANIFEST.md  COMPLETION_REPORT.md  DASHBOARD_ENHANCEMENT_GUIDE.md  DASHBOARD_VISUAL_SUMMARY.md  DESIGN_SUITE_INSTALLED.md  DOCUMENTATION_INDEX_FRONTEND.md  EVENTS_CLUBS_IMPLEMENTATION_SUMMARY.md  FINAL_DELIVERY_SUMMARY.md  FRONTEND_DESIGN.md  FRONTEND_INTEGRATION.md  FRONTEND_INTEGRATION_COMPLETE.md  FRONTEND_QUICK_START.md  GEMINI_ARCHITECTURE.md  GEMINI_CHATBOT_GUIDE.md  GEMINI_DOCUMENTATION_INDEX.md  GEMINI_IMPLEMENTATION_COMPLETE.md  GEMINI_PROJECT_STRUCTURE.md  GEMINI_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_SETUP_GUIDE.md  MASTER_INDEX_MODERN_PORTAL.md  MODERN_PORTAL_DEPLOYMENT.md  MODERN_PORTAL_QUICKSTART.md  MODERN_PORTAL_VISUAL_SHOWCASE.md  MODERN_STUDENT_PORTAL_GUIDE.md  MULTIPLE_AGENT_DEPLOYMENT_GUIDE.md  MULTIPLE_AGENT_PROJECT_COMPLETE.md  PHASE3_ANALYTICS.md  PHASE4_AI_INTELLIGENCE.md  PHASE4_QUICK_TEST.md  PHASE5_COMPLETION_REPORT.md  PHASE5_SECURITY_OPTIMIZATION.md  (+17 more)
SP0511---MAJOR-PROJECT--master/: .env.template  CLUB_MANAGEMENT.md  DOCUMENTATION_INDEX.md  FRONTEND_INTEGRATION_GUIDE.md  INTEGRATION_CHECKLIST.md  MODERN_FRONTEND_GUIDE.md  MODERN_PORTAL_COMPLETE.md  MULTIPLE_AGENT_PROJECT_INDEX.md  MULTIPLE_AGENT_VISUAL_ARCHITECTURE.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PROFESSIONAL_DESIGN_GUIDE.md  README_MULTIPLE_AGENT_PROJECT.md  TESTING_GUIDE.md  (+8 more)
(+120 files in other folders)
